--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,33 @@
+* {
+  padding: 0px;
+  margin: 0px; }
 
+body {
+  background-image: url(../../images/imgFundo.jpg);
+  background-size: cover;
+  background-repeat: repeat-y;
+  background-position: center;
+  color: white; }
+
+.container1 {
+  width: 450px;
+  height: auto; }
+
+.topLogo {
+  width: 210px; }
+
+.paragraph {
+  margin: 8px 0px; }
+
+.btnSend {
+  color: #0000ffd5;
+  border: 1px solid #0000ffd5; }
+  .btnSend:hover {
+    background-color: #0000ffd5;
+    color: white; }
+
+.fotter {
+  margin-top: 30px;
+  margin-bottom: -30px; }
 
 /*# sourceMappingURL=style.css.map */
