--- a/css/style.css
+++ b/css/style.css
@@ -30,4 +30,11 @@ body {
   margin-top: 30px;
   margin-bottom: -30px; }
 
+.divBox {
+    border: 2px solid rgb(126, 124, 124);
+    border-radius: 10px;
+    top: 20%;
+    text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
