--- a/scss/others/page.scss
+++ b/scss/others/page.scss
@@ -39,3 +39,9 @@ body {
     margin-top: 30px;
     margin-bottom: -30px;
 }
+
+.divBox {
+    border: 2px solid rgb(126, 124, 124);
+    border-radius: 10px;
+    position: absolute;
+}
